; ModuleID = '/home/carl/AnghaBench/libgit2/tests/reset/extr_soft.c_test_reset_soft__cannot_reset_to_a_tag_not_pointing_at_a_commit.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/reset/extr_soft.c_test_reset_soft__cannot_reset_to_a_tag_not_pointing_at_a_commit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@target = common dso_local global i32 0, align 4
@repo = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [8 x i8] c"53fc32d\00", align 1
@GIT_RESET_SOFT = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [8 x i8] c"521d87c\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_reset_soft__cannot_reset_to_a_tag_not_pointing_at_a_commit() #0 {
  %1 = load i32, i32* @repo, align 4
  %2 = call i32 @git_revparse_single(i32* @target, i32 %1, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0))
  %3 = call i32 @cl_git_pass(i32 %2)
  %4 = load i32, i32* @repo, align 4
  %5 = load i32, i32* @target, align 4
  %6 = load i32, i32* @GIT_RESET_SOFT, align 4
  %7 = call i32 @git_reset(i32 %4, i32 %5, i32 %6, i32* null)
  %8 = call i32 @cl_git_fail(i32 %7)
  %9 = load i32, i32* @target, align 4
  %10 = call i32 @git_object_free(i32 %9)
  %11 = load i32, i32* @repo, align 4
  %12 = call i32 @git_revparse_single(i32* @target, i32 %11, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.1, i64 0, i64 0))
  %13 = call i32 @cl_git_pass(i32 %12)
  %14 = load i32, i32* @repo, align 4
  %15 = load i32, i32* @target, align 4
  %16 = load i32, i32* @GIT_RESET_SOFT, align 4
  %17 = call i32 @git_reset(i32 %14, i32 %15, i32 %16, i32* null)
  %18 = call i32 @cl_git_fail(i32 %17)
  ret void
}

declare dso_local i32 @cl_git_pass(i32) #1

declare dso_local i32 @git_revparse_single(i32*, i32, i8*) #1

declare dso_local i32 @cl_git_fail(i32) #1

declare dso_local i32 @git_reset(i32, i32, i32, i32*) #1

declare dso_local i32 @git_object_free(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
